--- a/wiki/AboutPlugin.wiki
+++ b/wiki/AboutPlugin.wiki
@@ -3,11 +3,11 @@
 
 == About MP-TVSeries Plug-in ==
 
-MP-TVSeries is a popular TV Series plug-in for [http://www.team-mediaportal.com MediaPortal], a open-source media center application. It focuses on managing the user's TV Series library with minimal user interaction, allowing for a more user friendly and ease of use experience.
+MP-TVSeries is a popular TV Series plug-in for [http://www.team-mediaportal.com MediaPortal], an open-source media center application. It focuses on managing the user's TV Series library with minimal user interaction, allowing for a more user friendly and ease of use experience.
 
-The MP-TVSeries will scan your hard drive (including networked) for video files, analyse them by their path structures and then, if determined to be a TV Episode, go online and retrieve information about them. You can then browse, manage and play your episodes from inside MP in a nice graphical layout.
+The MP-TVSeries plugin will scan your hard drive (including network and removable drives) for video files, it then analyzes them by their path structures to determine if they are TV Shows. If the file(s) are recognized then the plugin will go online and retrieve information about them. You can then browse, manage and play your episodes from inside MediaPortal in a nice graphical layout.
 
-The information it retrieves is coming from [http://www.thetvdb.com TheTVDB.com] which allows any user to add and update information. The plug-in will automatically update any information so should for instance a series description change, this will automatically update for you. Please go there and support zsori (author and admin) by adding data and uploading banners. Remember, without this database (and the mirrors people are kindly providing) none of this would be possible. All fields available there are/will be supported. 
+The information it retrieves is coming from [http://www.thetvdb.com TheTVDB.com] which allows any user to add and update information. The plug-in will automatically update any information so should for instance a series description change, this will automatically update for you. Please go there and support zsori (author and admin) by adding data and uploading artwork. Remember, without this database (and the mirrors people are kindly providing) none of this would be possible. All fields available there are/will be supported. 
 
 == Staying Informed ==
 
@@ -15,4 +15,4 @@ A [http://forum.team-mediaportal.com/my-tvseries-162 sub-forum] is located on th
 
 == Getting Involved ==
 
-If you are interesting in contributing to this project, please send a email to one/both of the Project owners and they can talk about how you can help out. Feel free to post bugs and feature request. If you think a log file is relevant, please make sure you attach it to your post.
+If you are interesting in contributing to this project, please send an email to one of the Project owners and they can talk about how you can help out. Feel free to post bugs and feature request. If you think a log file or picture is relevant, please make sure you attach it to your post.
