--- a/MP-TVSeries/Online Parsing Classes/APIKey.resx
+++ b/MP-TVSeries/Online Parsing Classes/APIKey.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Key" xml:space="preserve">
-    <value></value>
+    <value>25716B24FCAEFDEE</value>
     <comment>Do NOT submitt this file with a working APIKey, developers need to get their own</comment>
   </data>
 </root>
