--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,9 +1,9 @@
 #summary Getting Started with MP-TVSeries plugin.
 <wiki:toc max_depth="3" />
-= Introduction =
+=Introduction=
 This guide is intended to guide you through your first experience with the MP-TVSeries plugin. It will take you through the most common steps to configure before you can start browsing your collection in MediaPortal. It does not cover any advanced configurations such as custom Regular Expressions.
 
-= Configuration =
+=Configuration 
 Before you launch MediaPortal, the plugin needs to be configured. This is handled from with MediaPortal's configuration utility. 
 
  * Launch Configuration from your desktop shortcut if not already open
@@ -12,7 +12,7 @@ Before you launch MediaPortal, the plugin needs to be configured. This is handle
  http://mptvseries.googlecode.com/svn/wiki/Images/MediaPortalPluginConfigurationMenu.jpg
  * Select *Configuration*
 
-== Import Paths ==
+==Import Paths==
 The configuration will first take you to the *Import* tab.
  * You now need to enter in the locations where your TVSeries collections are.
  * Click on *Path* box in the the Import Paths Grid.
@@ -30,7 +30,7 @@ If your Media is stored on a Removable Drive, then enable the checkbox *Removabl
 || LOCAL HDD || NO ||
 || NETWORK SHARE || NO ||
 
-== Parsing ==
+==Parsing==
 Once you have setup your import paths, check that your episodes were picked up by plugins parsing engine. This can be illustrated by the following image:
  http://mptvseries.googlecode.com/svn/wiki/Images/ParsingFailure.jpg
 
@@ -45,7 +45,7 @@ We can see that _Alias.avi_ does not contain a *Season No.* and an *Episode No*.
 Note: there are many ways in which you can organize your media, this is just one example. To find out more and receive help you can visit the [http://forum.team-mediaportal.com/my-tvseries-162/expressions-rules-requests-21978/ Parsing Expressions] topic in the TVSeries forums.
 
  * Click on the *Online Data* tab, to configure online settings
-== Online Data Settings  ==
+==Online Data Settings==
 The Online Data tab allows you configure the plugins behaviour when communicating to the [http://thetvdb.com/ Online Database]. Here is a list of recommended settings (not mandatory) that you may wish to change before continuing:
 
  * Add in your unique theTVDB Account Identifier into the Account ID text field, this allows you download/upload your favourite series and series/episode ratings. The Account Identifier can be found in your users [http://thetvdb.com/?tab=userinfo Account] page.
@@ -59,14 +59,14 @@ If you are not a registered user online then you sign-up [http://thetvdb.com/?ta
  * Enable _Download episode information for whole series_ if you like to see information on every episode for your series even if its not local on disk. This option only downloads the extra information, another setting is used to view all data.
  * Click on the *General Settings* tab, to configure general plugin settings
 
-== General Settings ==
+==General Settings==
 Use General Settings to configure behaviour of the plugin when browsing your collection in MediaPortal. Here is a list of recommended settings (not mandatory) that you may wish to change before continuing:
 
  * Select your Language from the dropdown box, this is a localization setting for all plugin data displayed to the user in MediaPortal. It does not translate the data retrieved online.
  * Enable _Popup Rate dialog after episode is watched_ if you like to contribute to the online database and store your episode ratings immediately after watching an episode. If this option is not enabled you also have the choice of manually invoking the rate dialog.
 * Click on the *Import* tab, to get ready to import data from online.
 
-== Import ==
+==Import==
 The Import Tab is used to initially download all the data from online for your series collection. 
 
  * Click the *arrow* at the bottom of the tab to expand the log window, this will allow you to see the progress of the Import.
@@ -79,7 +79,7 @@ The Import Tab is used to initially download all the data from online for your s
  *  The Importing is complete when the Progress Bar is 100% and the Log window reports *Completed*
  * Click on the *Views/Filters* tab, to configure the available views.
 
-== View/Filters ==
+==View/Filters==
 Use Views/Filters to better categorize your collection when browsing in MediaPortal. Here is a list of recommended settings (not mandatory) that you may wish to change before continuing:
 
  * Click on the *Templates* button, browse the list of default templates not already in the list that may suit you and click *OK*
@@ -94,21 +94,20 @@ Use Views/Filters to better categorize your collection when browsing in MediaPor
 
 Thats It! You have now have completely gone through all the basic configuration parameters of the plugin, sure there is much more to learn but this should get you going for now. Exit the plugin Configuration (All Information is saved in the database as soon as you change something configuration) and Press *OK* to close and save MediaPortals Configuration.
 
-
-= MediaPortal =
+=Mediaportal=
 Now that we have configured the plugin, lets take a tour with-in MediaPortal. 
 
  * Open MediaPortal, you are presented with the Home screen and a list of Plugins to choose from.
  * Select My TVSeries to enter the plugin. At first you will be presented with a listing of all your Series (View: All):
  http://mptvseries.googlecode.com/svn/wiki/Images/PluginSeriesListView.jpg
 
-== Navigating ==
+==Navigating==
 Take a minute and examine the image to get familiar with some of the terms used. You can interact with the plugin using the Remote / Keyboard to select different series or enter a series. When you enter a series, you will be presented with list of seasons / episodes available:
  http://mptvseries.googlecode.com/svn/wiki/Images/PluginEpisodeView.jpg
 
  * To play an episode, select OK/ENTER on the Remote / Keyboard and the episode will automatically play.
 
-== Context Menu ==
+==Context Menu==
 With-in each view heirachy (groups, series, seasons, episodes), you have access to a number of options / actions. Some are these are context sensitive e.g. Rate an Episode. To access these options you need to invoke the menu.
 
  * Select an item on the facade e.g. a series or an episode
@@ -129,7 +128,7 @@ Here is a quick list of items that you can do through the menu system:
   * Toggle the watched status of the episode
   * Add the episode to a playlist
 
-== Views System ==
+==Views System==
 You can access the view menu to filter the content of your collection. The Views menu can be accessed from anywhere.
 
  * Press *Info* or press *F9* on the remote to invoke the menu
@@ -144,18 +143,18 @@ Some views are protected using a 4-Digit Pin Code, if the view is protected then
 
 If the PinCode entered is in-correct, you will be prompted. Press *Left* or *Delete* on keyboard to clear the pins.
 
-== Playlists ==
+==Playlists==
 Playlists are a special type of view, when you play from a playlist the next episode immediately plays and so on. You also have options to *Repeat* or *Shuffle* the list.
  http://mptvseries.googlecode.com/svn/wiki/Images/PluginPlaylistView.jpg
 
-=== Create ===
+===Create===
 To Create a playlist, follow these directions:
  * Select an episode from the list
  * Press *Info* or press *F9* on the remote to invoke the menu
  * Select *Add to Playlist*
  * Repeat for all episodes you want in the playlist, if you to add all episodes of a series in 1 step then you can *Add to playlist* at the series level.
  
-=== View ===
+===View===
 To View the current playlist you first need to access the Hidden menu, follow these directions:
  * If you are in List or Banners layout, navigate *Left* or away from the facade
  * If you are in Filmstrip layout, navigate *Up*
@@ -163,7 +162,7 @@ To View the current playlist you first need to access the Hidden menu, follow th
  * Select *Current Playlist*
  * To open a saved playlist, select *My Playlists*
 
-=== Control ===
+===Control===
 There are several actions you can do when in playlist view such as:
  * Move an item up or down (navigate right on the facade, and select the arrow)
  * Delete an item (navigate right on the facade, and select the cross)
