--- a/wiki/SkinDesignersGuide.wiki
+++ b/wiki/SkinDesignersGuide.wiki
@@ -8,10 +8,12 @@ For skinning MP-TVSeries, you are welcome to use whatever skin you like as a bas
 
 If you are new to skinning, please check out the [http://www.team-mediaportal.com/manual/MediaPortal1_Development/SkinArchitecture Skin Designer's Guide] on the MediaPortal wiki. 
 
+= Table of Contents =
+
+<wiki:toc max_depth="3" />
+
 = Skinner's Change Log =
-
 == v2.2 - v2.3 ==
-
  * Series Posters and Series Banners are now exposed to the skin as two separate properties: 
 
 || *Property* || *Description* ||
@@ -30,11 +32,14 @@ If you are new to skinning, please check out the [http://www.team-mediaportal.co
 
  * Dummy Label controls *1235* and *1236* have been removed, skinner should use *facadeview.list* and *!facadeview.list* instead.
 
+ * Season Artwork property has been renamed from #TVSeries.SeasonBanner to #TVSeries.SeasonPoster
+
 = Skin Files =
 The plugin requires several skin files if you wish to expose all functionality of the plugin. Not all skin files are mandatory but its recommended that all are included with Skin releases. The table below describes each skin file and controls used:
 
 == Main ==
 This is the main skin file of the plugin. It must exist otherwise a skin error dialog will be shown to the user.
+
 === Skin File ===
 || *ID* || *Filename* ||
 || 9811 || TVSeries.xml ||
@@ -50,7 +55,7 @@ This table illustrates the skin controls used by the main plugin
 || Button || 9 || Displays a list of saved playlists for load ||
 || Facade || 50 || The main facade control used by all views ||
 || Animation || 51 || An Import Animation that gets displayed when the plugin is working ||
-|| Image || 66 || Displays a single image of all logos that were evaluated by the Logo Rules ||
+|| Image || 66 || Displays a single image of all logos that were evaluated by the [http://code.google.com/p/mptvseries/wiki/SkinDesignersGuide#Logo_Rules Logo Rules] ||
 || Image || 67 || Displays a thumbnail for selected episode ||
 || Image || 524 || Fanart Background #1||
 || Image || 525 || Fanart Background #2, used for Fanart Fading Transitions||
@@ -70,7 +75,7 @@ Dummy Controls are used so the plugin can force changes in the skin. This is don
 || 1244 || Visible when the selected item is not available, applied to all views except groups ||
 
 
-== Fanart Chooser ==
+== Fanart Chooser Window ==
 This is the skin file that the plugin uses to show a list of Fanart that the user has downloaded and available online to download.
 
 === Skin File ===
@@ -156,34 +161,45 @@ Each skin has its own unique set of properties that can be used, see the table b
 
 == Main Plugin ==
 || *Property* || *Description* ||
-||#TVSeries.Title  ||  ||
-||#TVSeries.Subtitle  ||  ||
-||#TVSeries.Description  ||  ||
-||#TVSeries.SimpleCurrentView  ||  ||
-||#TVSeries.CurrentView  ||  ||
-||#TVSeries.SeriesBanner  ||  ||
-||#TVSeries.SeriesPoster  ||  ||
-||#TVSeries.EpisodeImage  ||  ||
-||#TVSeries.Logos  ||  ||
-||#TVSeries.Fanart.1  ||  ||
-||#TVSeries.Fanart.2  ||  ||
-||#TVSeries.SeriesCount  ||  ||
-||#TVSeries.GroupCount  ||  ||
+||#TVSeries.Title  || The Title of the Series or Episode  ||
+||#TVSeries.Subtitle  || The Sub-Title of the Series or Episode ||
+||#TVSeries.Description  || The Description of the Series or Episode ||
+||#TVSeries.SimpleCurrentView  || The name of the current view ||
+||#TVSeries.CurrentView  || The name of the current view including hierarchy structure ||
+||#TVSeries.SeriesPoster  || The Filename of the current Series Poster ||
+||#TVSeries.SeriesBanner  || The Filename of the current Series Wide Banner ||
+||#TVSeries.SeasonPoster  || The Filename of the current Season Poster ||
+||#TVSeries.EpisodeImage  || The Filename of the current Episode Thumbnail ||
+||#TVSeries.Logos  || The Filename of the dynamically created Logos   ||
+||#TVSeries.Fanart.1  || The 1st Fanart used in the Fanart Fading Logic ||
+||#TVSeries.Fanart.2  || The 2nd Fanart used in the Fanart Fading Logic ||
+||#TVSeries.SeriesCount  || The current number of Series displayed in the Facade ||
+||#TVSeries.GroupCount  || The current number of Groups displayed in the Facade ||
+
+*Note:* Title, Sub-Title and Description properties can be overridden by the user in the MP-TVSeries configuration under the *Layout* tab.
+
+The TVSeries plugin also exposes all Database fields, simply prefix the property with the current level (Series,Season or Episode) e.g:
+
+ * #TVSeries.Series.EpisodeCount
+ * #TVSeries.Season.EpisodeCount
+ * #TVSeries.Episode.VideoFrameRate
+
+For a full list of fields available see the *Details* tab in configuration. It should be noted that using these fields takes away any flexibility for Power Users being able to easily customize the skin, in this case there is a powerful feature called [http://code.google.com/p/mptvseries/wiki/SkinDesignersGuide#Formatting_Rules Formatting Rules] available to skinners. 
 
 == Fanart Chooser ==
 || *Property* || *Description* ||
-||#TVSeries.FanArt.Colors.LightAccent  ||  ||
-||#TVSeries.FanArt.Colors.DarkAccent  ||  ||
-||#TVSeries.FanArt.Colors.Neutral Midtone  ||  ||
-||#TVSeries.FanArt.SelectedFanartResolution  ||  ||
-||#TVSeries.FanArt.SelectedFanartInfo  ||  ||
-||#TVSeries.FanArt.SelectedPreview  ||  ||
-||#TVSeries.FanArt.LoadingStatus  ||  ||
-||#TVSeries.FanArt.DownloadingStatus  ||  ||
-||#TVSeries.FanArt.PageTitle  ||  ||
-||#TVSeries.FanArt.SelectedFanartColors  ||  ||
-||#TVSeries.FanArt.SelectedFanartIsChosen  ||  ||
-||#TVSeries.FanArt.SelectedFanartIsDisabled  ||  ||
+||#TVSeries.FanArt.Colors.LightAccent  || The Light Accent color of the current Fanart ||
+||#TVSeries.FanArt.Colors.DarkAccent  || The Dark Accent color of the current Fanart ||
+||#TVSeries.FanArt.Colors.Neutral Midtone  || The Neutral Accent color of the current Fanart ||
+||#TVSeries.FanArt.SelectedFanartResolution  || The Resolution of the current Fanart ||
+||#TVSeries.FanArt.SelectedFanartInfo  || Detailed description of the current Fanart  ||
+||#TVSeries.FanArt.SelectedPreview  || The file name to the FullSize image of the current Fanart ||
+||#TVSeries.FanArt.LoadingStatus  || The current loading status of Fanart thumbnails from online  ||
+||#TVSeries.FanArt.DownloadingStatus  || The current downloading status of all fanart set to download ||
+||#TVSeries.FanArt.PageTitle  || The name of the Fanart Chooser window ||
+||#TVSeries.FanArt.SelectedFanartColors  || The Colors set for the current Fanart ||
+||#TVSeries.FanArt.SelectedFanartIsChosen  || True if the current Fanart is the default fanart ||
+||#TVSeries.FanArt.SelectedFanartIsDisabled  || True if the current Fanart is disabled ||
 
 
 = View Hierarchy =
@@ -299,4 +315,65 @@ The *List* layout in views, allow you to set the three item labels on the facade
 }}}
 
 The item labels using angled brackets are database fields in the plugin, a list of useful fields can be found here. These fields should also be wrapped in a CDATA section so that the XML document can be read correctly by the XML parser. You are not limited to database fields, you can also type in any string or even create a Formatting Rule and use that when you need to format the data e.g. Episode Counts
+
+= Formatting Rules =
+The Skin Settings file also allows you to create advanced properties not available in the database called Formatting Rules. These are basically expressions that the plugin will evaluate when loading the skin. A formatting rules consists of two main parts, the property name and how it should be formatted. Here is an example:
+
+{{{
+<formatting import="true">
+  <![CDATA[<Enabled>1<Format><Episode.RatingPath><FormatAs>TVSeries\starEval(10*Round(<Episode.Rating>*2)/2).png
+  <Enabled>1<Format><Episode.InfoPanelLine1Key><FormatAs>
+  <Enabled>1<Format><Episode.InfoPanelLine1Value><FormatAs>(MY RATING: <Episode.myRating>)
+  <Enabled>1<Format><Episode.InfoPanelLine2Key><FormatAs>FILE SIZE
+  <Enabled>1<Format><Episode.InfoPanelLine2Value><FormatAs><Episode.FileSize>
+  <Enabled>1<Format><Episode.InfoPanelLine4Key><FormatAs>DIRECTOR
+  <Enabled>1<Format><Episode.InfoPanelLine4Value><FormatAs><Episode.Director>
+  <Enabled>1<Format><Episode.InfoPanelLine5Key><FormatAs>WRITER
+  <Enabled>1<Format><Episode.InfoPanelLine5Value><FormatAs><Episode.Writer>
+  <Enabled>1<Format><Episode.InfoPanelLine6Key><FormatAs>GUEST STARS
+  <Enabled>1<Format><Episode.InfoPanelLine6Value><FormatAs><Episode.GuestStars>
+  <Enabled>1<Format><Episode.SeasonLabel><FormatAs>Season <Episode.SeasonIndex>
+  <Enabled>1<Format><Season.SeasonLabel><FormatAs>Season <Season.SeasonIndex>
+  <Enabled>1<Format><Series.InfoPanelLine1Key><FormatAs>RATING
+  <Enabled>1<Format><Series.InfoPanelLine1Value><FormatAs>(MY RATING: <Series.myRating>)
+  <Enabled>1<Format><Series.InfoPanelLine2Key><FormatAs>FIRST AIRED
+  <Enabled>1<Format><Series.InfoPanelLine2Value><FormatAs><Series.FirstAired> (<Series.Status>)
+  <Enabled>1<Format><Series.InfoPanelLine3Key><FormatAs>GENRE
+  <Enabled>1<Format><Series.InfoPanelLine3Value><FormatAs><Series.Genre>
+  <Enabled>1<Format><Series.InfoPanelLine4Key><FormatAs>RUNTIME
+  <Enabled>1<Format><Series.InfoPanelLine4Value><FormatAs><Series.Runtime> minutes
+  <Enabled>1<Format><Series.InfoPanelLine5Key><FormatAs>NETWORK
+  <Enabled>1<Format><Series.InfoPanelLine5Value><FormatAs><Series.Network>
+  <Enabled>1<Format><Series.InfoPanelLine6Key><FormatAs>ACTORS
+  <Enabled>1<Format><Series.InfoPanelLine6Value><FormatAs><Series.Actors>
+  <Enabled>1<Format>x () fps<FormatAs>N / A
+  <Enabled>1<Format>0 bytes<FormatAs>N / A
+  <Enabled>1<Format>(MY RATING: )<FormatAs> 
+  <Enabled>1<Format>2channels <FormatAs>2.0 
+  <Enabled>1<Format>6channels <FormatAs>5.1  ]]>
+</formatting>
+}}}
+
+Formatting Rules can also make use of the built-in Math engine, allowing you to have a lot more control on how the data is displayed e.g. Lets say you want to display the number of episodes that are watched for a series, you can create a rule which subtracts the Unwatched episodes from the Total Episodes like so:
+{{{
+<Enabled>1<Format><Series.EpisodesWatched><FormatAs><Series.EpisodeCount>-<Series.EpisodesUnWatched>
+}}}
+
+This can then be used in your skin as standard property using: #TVSeries.Series.EpisodesWatched.
+
+= Logo Rules =
+Logo Rules allow you to create a Single Image on the skin which consists of multiple logos, the logos get added to the image (from Left to Right) in the order they were successfully evaluated. If the image does not exist, or the rule does not evaluate based on the conditions set then the image is not added. The advantage of this is that you dont need to worry about any gaps generated, also it only requires a single Image on the skin. Here is an example set of logo rules:
+{{{
+<logos import="true">
+  <![CDATA[skin\Blue3wide\Media\TVSeries\Logos\<Series.Network>.png;-;;-;=;-;;-;AND;-;;-;=;-;;-;AND;-;;-;=;-;;-;
+  skin\Blue3wide\Media\TVSeries\Logos\HD 720P_2.png;-;<Episode.videoWidth>;-;=;-;1280;-;AND;-;<Episode.videoHeight>;-;=;-;720;-;AND;-;;-;=;-;;-;
+  skin\Blue3wide\Media\TVSeries\Logos\Full HD 1080.png;-;<Episode.videoWidth>;-;=;-;1920;-;AND;-;<Episode.videoHeight>;-;=;-;1080;-;AND;-;;-;=;-;;-;
+  skin\Blue3wide\Media\TVSeries\Logos\<Episode.VideoCodec>.png;-;;-;=;-;;-;AND;-;;-;=;-;;-;AND;-;;-;=;-;;-;
+  skin\Blue3wide\Media\TVSeries\Logos\<Episode.AudioCodec>.png;-;;-;=;-;;-;AND;-;;-;=;-;;-;AND;-;;-;=;-;;-;
+  skin\Blue3wide\Media\TVSeries\Logos\Widescreen White.png;-;<Episode.VideoAspectRatio>;-;>;-;1.7;-;AND;-;<Episode.VideoAspectRatio>;-;<;-;2.5;-;AND;-;;-;=;-;;-;
+  skin\Blue3wide\Media\TVSeries\Logos\Fullscreen.png;-;<Episode.VideoAspectRatio>;-;>;-;1.3;-;AND;-;<Episode.VideoAspectRatio>;-;<;-;1.5;-;AND;-;;-;=;-;;-;
+  skin\Blue3wide\Media\TVSeries\Logos\<Series.Genre>.png;-;;-;=;-;;-;AND;-;;-;=;-;;-;AND;-;;-;=;-;;-;]]>
+</logos>
+}}}
+Logo Rules can be easily configured in the plugins configuration and then copied into the Skin Settings xml.
 
